--- a/client/ios/networkextension/AmneziaVPNNetworkExtension.entitlements
+++ b/client/ios/networkextension/AmneziaVPNNetworkExtension.entitlements
@@ -8,11 +8,11 @@
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.amnezia.AmneziaVPN</string>
+		<string>group.ru.breffi.AmneziaVPN</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)group.org.amnezia.AmneziaVPN</string>
+		<string>$(AppIdentifierPrefix)group.ru.breffi.AmneziaVPN</string>
 	</array>
 </dict>
 </plist>
